--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,7 @@ header {
 }
 
 nav {
+    display: flex;
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -52,6 +53,7 @@ p {
 }
 
 main {
+    display: flex;
     width: 75%;
     display: inline-block;
     margin-left: 20px;
@@ -66,6 +68,7 @@ aside {
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
+    flex-wrap: wrap;
 }
 
 footer {
@@ -139,4 +142,25 @@ footer h2 {
 .social-media-marketing h2 {
     margin-bottom: 20px;
     font-size: 36px;
+}
+/*Took the code below from activity 5 on week two content about responsive design*/
+@media screen and (max-width: 768px) {
+    /* Use flex-direction to stack the navbar, sidebar, and body */
+    main,
+    nav {
+      flex-direction: column;
+    }
+    /* Make the sidebar stack below the body */
+    aside {
+      order: 2;
+    }
+    /* Change the header background */
+    header {
+      background: #772014;
+    }
+    /* Change the navbar and footer background */
+    nav,
+    footer {
+      background-color: #bb8588;
+    }
 }
